package de.othr.bib48218.chat.entity;

public class Attachment {
    private int size;
    private String name;
    private String mimeType;
}
