package de.othr.bib48218.chat.entity;

public class ChatProfile {
    private String description;
}
