package de.othr.bib48218.chat.entity;

public enum GroupVisibility {
    Private,
    Public,
}
