package de.othr.bib48218.chat.entity;

public class PeerChat extends Chat {
}
