package de.othr.bib48218.chat.entity;

public class Person extends User {
    private String firstName;
    private String lastName;
    private String email;
    private ServiceCredentials credentials;
}
