package de.othr.bib48218.chat.entity;

public abstract class Profile {
    private String name;
    private String imagePath;
}
