package de.othr.bib48218.chat.entity;

public enum ServiceType {
    Webshop,
    Bank,
    Payment,
}
