package de.othr.bib48218.chat.entity;

public class UserProfile {
    private String bio;
    private String country;
}
